--- a/public/login.html
+++ b/public/login.html
@@ -37,7 +37,8 @@
           </div>
           <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
             <div class="w-full">
-              <h1
+              <form id="login-form" class="mb-4">
+                <h1
                 class="mb-4 text-xl font-semibold text-gray-700 dark:text-gray-200"
               >
                 Login
@@ -46,25 +47,27 @@
                 <span class="text-gray-700 dark:text-gray-400">Email</span>
                 <input
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-                  placeholder="Jane Doe"
+                  placeholder="Jane Doe" type="email" id="email"
                 />
+                <span id="error-email" class="text-red-600"></span>
               </label>
               <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Password</span>
                 <input
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                   placeholder="***************"
-                  type="password"
+                  type="password" id="password"
                 />
+                <span id="error-password"  class="text-red-600"></span>
               </label>
 
               <!-- You should use a button here, as the anchor is only used for the example  -->
-              <a
+              <button
                 class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
-                href="./index.html"
+                type="submit"
               >
                 Log in
-              </a>
+              </button>
 
               <hr class="my-8" />
 
@@ -115,10 +118,12 @@
                   Create account
                 </a>
               </p>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script type="module" src="./assets/js/auth/login.js"></script>
   </body>
 </html>
