--- a/public/pages/create-account.html
+++ b/public/pages/create-account.html
@@ -37,27 +37,40 @@
           </div>
           <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
             <div class="w-full">
-              <h1
+              <form id="create-account-form" class="mb-4">
+                <h1
                 class="mb-4 text-xl font-semibold text-gray-700 dark:text-gray-200"
               >
                 Create account
               </h1>
-              <label class="block text-sm">
+
+              <label class="block mt-4 text-sm">
+                <span class="text-gray-700 dark:text-gray-400">Name</span>
+                <input
+                  class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+                  placeholder="Jane Doe" id="name" type="text"
+                />
+                <span id="error-name"  class="text-red-600"></span>
+              </label>
+
+              <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Email</span>
                 <input
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-                  placeholder="Jane Doe"
+                  placeholder="Jane Doe" type="email" id="email"
                 />
+                <span id="error-email" class="text-red-600"></span>
               </label>
               <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">Password</span>
                 <input
                   class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                   placeholder="***************"
-                  type="password"
+                  type="password" id="password" 
                 />
+                <span id="error-password"  class="text-red-600"></span>
               </label>
-              <label class="block mt-4 text-sm">
+              <!-- <label class="block mt-4 text-sm">
                 <span class="text-gray-700 dark:text-gray-400">
                   Confirm password
                 </span>
@@ -66,9 +79,9 @@
                   placeholder="***************"
                   type="password"
                 />
-              </label>
+              </label> -->
 
-              <div class="flex mt-6 text-sm">
+              <!-- <div class="flex mt-6 text-sm">
                 <label class="flex items-center dark:text-gray-400">
                   <input
                     type="checkbox"
@@ -79,15 +92,15 @@
                     <span class="underline">privacy policy</span>
                   </span>
                 </label>
-              </div>
+              </div> -->
 
               <!-- You should use a button here, as the anchor is only used for the example  -->
-              <a
+              <button
                 class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
-                href="./login.html"
+                type="submit"
               >
                 Create account
-              </a>
+              </button>
 
               <hr class="my-8" />
 
@@ -125,15 +138,17 @@
               <p class="mt-4">
                 <a
                   class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
-                  href="./login.html"
+                  href="../login.html"
                 >
                   Already have an account? Login
                 </a>
               </p>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <script type="module" src="../assets/js/auth/create-user.js"> </script>
   </body>
 </html>
